test/variables/kbrady/ref-to-literal.good
ref-to-literal.chpl:1: error: Cannot set a non-const reference to a literal value.
